tests/reference/run-deallocate_02-5ce07d4.stderr
runtime error: Attempting to deallocate unallocated variable 'a'
 --> tests/errors/deallocate_02.f90:6:16
  |
6 |     deallocate(a)
  |                ^ Cannot deallocate 'a' because it is not allocated
